RESOLVED FIXED269956
[UnifiedPDF] Fix coordinate space for accessibility
https://bugs.webkit.org/show_bug.cgi?id=269956
Summary [UnifiedPDF] Fix coordinate space for accessibility
Elina Ding
Reported 2024-02-22 17:03:29 PST
Attachments
Elina Ding
Comment 1 2024-02-22 17:34:42 PST
Elina Ding
Comment 2 2024-02-26 19:05:41 PST
EWS
Comment 3 2024-03-08 10:57:49 PST
Committed 275848@main (0d1d56d4da98): <https://commits.webkit.org/275848@main> Reviewed commits have been landed. Closing PR #24987 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.