[UnifiedPDF] Fix coordinate space for accessibility.

Reviewed by Abrar Rahman Protyasha.

- Fix VO cursor position does not match the focused element in unified pdf.
There are 2 parts of this change. One in pdfKit and one in webKit
- Update the plugin in WKAccessibilityDocumentObject to UnifiedPDFPlugin
- Remove extra functions
- Add new accessibility support api.

* Source/WebKit/WebProcess/Plugins/PDF/PDFPluginBase.h:
* Source/WebKit/WebProcess/Plugins/PDF/PDFPluginBase.mm:
(WebKit::PDFPluginBase::PDFPluginBase):
(WebKit::PDFPluginBase::convertFromPDFViewToRootView const): Deleted.
(WebKit::PDFPluginBase::convertFromPDFViewToScreenForAccessibility const): Deleted.
(WebKit::PDFPluginBase::convertFromRootViewToPDFView const): Deleted.
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.h:
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::UnifiedPDFPlugin):
(WebKit::UnifiedPDFPlugin::accessibilityScrollToPage):
(WebKit::UnifiedPDFPlugin::convertFromPDFPageToScreenForAccessibility const):
(WebKit::UnifiedPDFPlugin::accessibilityHitTestIntPoint const):
* Source/WebKit/WebProcess/Plugins/PDF/WKAccessibilityPDFDocumentObject.h:
* Source/WebKit/WebProcess/Plugins/PDF/WKAccessibilityPDFDocumentObject.mm:
(-[WKAccessibilityPDFDocumentObject setPDFPlugin:]):
(-[WKAccessibilityPDFDocumentObject accessibilityFocusedUIElement]):
(-[WKAccessibilityPDFDocumentObject accessibilityWindow]):
(-[WKAccessibilityPDFDocumentObject accessibilityTopLevelUIElement]):
(-[WKAccessibilityPDFDocumentObject accessibilityVisibleChildren]):
(-[WKAccessibilityPDFDocumentObject accessibilitySubrole]):
(-[WKAccessibilityPDFDocumentObject accessibilityFrame]):
(-[WKAccessibilityPDFDocumentObject accessibilityParent]):
(-[WKAccessibilityPDFDocumentObject accessibilityAttributeValue:]):
(-[WKAccessibilityPDFDocumentObject accessibilityArrayAttributeCount:]):
(-[WKAccessibilityPDFDocumentObject accessibilityChildren]):
(-[WKAccessibilityPDFDocumentObject convertFromPDFPageToScreenForAccessibility:pageIndex:]):
(-[WKAccessibilityPDFDocumentObject accessibilityHitTest:]):
(-[WKAccessibilityPDFDocumentObject gotoDestination:]):
(-[WKAccessibilityPDFDocumentObject parent]): Deleted.

[UnifiedPDF] Fix coordinate space for accessibility https://bugs.webkit.org/show_bug.cgi?id=269956 rdar://123459892

Reviewed by Abrar Rahman Protyasha.

- Fix VO cursor position does not match the focused element in unified pdf.
There are 2 parts of this change. One in pdfKit and one in webKit
- Update the plugin in WKAccessibilityDocumentObject to UnifiedPDFPlugin
- Remove extra functions
- Add new accessibility support api

Canonical link: https://commits.webkit.org/275848@main